# blue-pill_mini-blink

./: CMakeLists.txt  README.md  init_stm32f103x8.c  stm32f103x8.ld  toolchain.cmake
docker/: Dockerfile  build-image.sh
src/: main.c
stlink/: custom_stlink-v2.cfg  official_stlink-v2.cfg  openocd.cfg
